[workspace]
members = [
    "lorawan-device",
    "lorawan-encoding",
    "lora-modulation",
    "lora-phy",
]
exclude = [
    "examples/nrf52840",
    "examples/rp",
    "examples/stm32l0",
    "examples/stm32wl",
    "examples/pycom-lopy4",
]
resolver = "2"

[profile.dev]
opt-level = "s"

[profile.release]
debug = true
