[package]
name = "pycom-lopy4"
version = "0.1.0"
authors = ["windy40 <57284781+windy40@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3.8", features=[]}


embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

esp-backtrace = { version = "0.13.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "defmt",
] }
esp-hal = { version = "0.19.0", features=["default", "esp32", "defmt", "async", "embedded-hal"]}
esp-hal-embassy = { version = "0.2.0", features=["esp32", "defmt", "integrated-timers"]}
esp-println = { version = "0.10.0", features = ["esp32", "defmt-espflash"] }

static_cell = "2.1.0"
no_std_strings = "0.1.3"



embassy-executor    = { version = "0.6.0", features = ["task-arena-size-40960", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }


lora-phy = { path = "../../lora-phy", features = ["lorawan-radio"] }
lorawan-device = { path = "../../lorawan-device", features = ["embassy-time", "default-crypto", "defmt"] }

[features]
default = []
with-oled = []

[patch.crates-io]
# TODO: Async SPI with DMA was broken, see https://github.com/esp-rs/esp-hal/issues/1857
esp-hal = { git = "https://github.com/esp-rs/esp-hal"}
# TODO: No release for 0.19.0
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
